<resources>
    <string name="app_name">PremiumMovieApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_button_play">Play</string>
    <string name="name_button_add_list">My List</string>
    <string name="sample_earnings_movie_home">Earnings this week</string>
    <string name="sample_title_movie_home">Sample Title</string>
    <string name="top_10_movies">Top 10 Popular Movies</string>
    <string name="top_10_tvs">Top 10 Best Movies</string>
    <string name="top_10_await">Top 10 Await Movies</string>
    <string name="see_all">See all</string>
    <string name="sample_rating">9.0</string>
    <string name="sample_year">2000</string>
    <string name="sample_runtime">1h 00min</string>
    <string name="sample_company">Universal Pictures</string>
    <string name="sample_genres">Жанры: </string>
    <string name="sample_number_season">s.</string>
    <string name="sample_number_episodes">e.</string>
    <string name="sample_description">Описание: </string>
    <string name="sequels_and_prequels_movie_details">Сиквелы и Приквелы</string>
    <string name="more_like_this_movie_details">Больше Похожих</string>
    <string name="text_error_connection">Connection Error</string>
    <string name="choose_season_movie_details">Season</string>
    <string name="choose_season_movie_details_alert_dialog">Choose season</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="best_movies">Best Movies</string>
    <string name="await_movies">Await Movies</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="rank_and_title_item_full_popular">1(+10) Title</string>
    <string name="title_item_coming_soon">Title</string>
    <string name="name_item_cast">Leonardo DiCaprio</string>
    <string name="name_item_character">Cobb</string>
    <string name="release_item_coming_soon">Jan 01, 2000</string>
    <string name="genres_item_coming_soon">Action</string>
    <string name="watchlist">Watchlist</string>
    <string name="ratinglist">Ratings</string>
    <string name="watchlist_count">200</string>
    <string name="ratinglist_count">200</string>
    <string name="alert_dialog_remove_watchlist_title">Подтвердите удаление</string>
    <string name="alert_dialog_remove_watchlist_message">Вы собираетесь удалить из Watchlist</string>
    <string name="alert_dialog_ratingbar_ratinglist_title">Какую оценку вы хотите поставить</string>
    <string name="alert_dialog_update_rating_ratinglist_title">Какие изменения вы хотите внести</string>
    <string name="email_sing_in">Email</string>
    <string name="password_sing_in">Password</string>
    <string name="login_sing_in">Login</string>
    <string name="go_to_registration_sign_in">У Вас ещё нет аккаунта?</string>
    <string name="go_to_login_sign_up">Вернуться ко входу</string>
    <string name="name_sign_up">Name</string>
    <string name="registration_sing_up">Register</string>
    <string name="confirm_password_sign_up">Confirm Password</string>
    <string name="log_out_profile">Log Out</string>
</resources>