<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.main.auth.SignUpFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_view_background"
        android:hint="@string/name_sign_up" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_view_background"
        android:hint="@string/email_sing_in"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_view_background"
        android:hint="@string/password_sing_in"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etConfirmPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_view_background"
        android:hint="@string/confirm_password_sign_up"
        android:inputType="textPassword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/home_item_recycler_background"
            android:backgroundTint="@color/red_main"
            android:text="@string/registration_sing_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/btnRegisterSignUpProgressBar"
            android:elevation="7dp"
            android:layout_marginStart="80dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/btnRegisterSignUp"
            app:layout_constraintTop_toTopOf="@id/btnRegisterSignUp"
            app:layout_constraintBottom_toBottomOf="@id/btnRegisterSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/go_to_login_sign_up"
        android:textColor="@color/red_main"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>