<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMovieDetailsEpisodesItemImage"
        android:layout_width="70dp"
        android:layout_height="110dp"
        android:layout_margin="5dp"
        android:background="@drawable/home_item_recycler_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieDetailsEpisodesItemNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_number_season"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/ivMovieDetailsEpisodesItemImage"
        app:layout_constraintEnd_toEndOf="@id/ivMovieDetailsEpisodesItemImage"
        app:layout_constraintStart_toStartOf="@id/ivMovieDetailsEpisodesItemImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieDetailsEpisodesItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ellipsize="end"
        android:maxWidth="150dp"
        android:maxLines="2"
        android:text="@string/sample_title_movie_home"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvMovieDetailsEpisodesItemRelease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivMovieDetailsEpisodesItemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieDetailsEpisodesItemRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/release_item_coming_soon"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tvMovieDetailsEpisodesItemRating"
        app:layout_constraintStart_toEndOf="@id/ivMovieDetailsEpisodesItemImage"
        app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsEpisodesItemTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieDetailsEpisodesItemRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_star"
        android:drawableTint="@color/imdb_yellow"
        android:gravity="center"
        android:text="@string/sample_rating"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivMovieDetailsEpisodesItemImage"
        app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsEpisodesItemRelease" />

</androidx.constraintlayout.widget.ConstraintLayout>