<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPosterItemComingSoon"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:background="@drawable/home_item_recycler_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleItemComingSoon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/title_item_coming_soon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvGenresItemComingSoon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPosterItemComingSoon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGenresItemComingSoon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/genres_item_coming_soon"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvReleaseItemComingSoon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPosterItemComingSoon"
        app:layout_constraintTop_toBottomOf="@id/tvTitleItemComingSoon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvReleaseItemComingSoon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/release_item_coming_soon"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPosterItemComingSoon"
        app:layout_constraintTop_toBottomOf="@id/tvGenresItemComingSoon" />

</androidx.constraintlayout.widget.ConstraintLayout>