<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.list.list.ui.ListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListWatchlistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/watchlist"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvListWatchlistCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListWatchlistCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="44dp"
            android:text="@string/watchlist_count"
            app:layout_constraintStart_toEndOf="@id/tvListWatchlistName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvListWatchlistSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/see_all"
            android:textColor="@color/red_main"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListWatchlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvListWatchlistName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListRatinglistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/ratinglist"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvListRatinglistCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvListWatchlist" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListRatinglistCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/ratinglist_count"
            app:layout_constraintStart_toEndOf="@id/tvListRatinglistName"
            app:layout_constraintTop_toBottomOf="@id/rvListWatchlist" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListRatinglistSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/see_all"
            android:textColor="@color/red_main"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvListWatchlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListRatinglist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvListRatinglistName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>