<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivListItemFullListRatinglistPoster"
        android:layout_width="100dp"
        android:layout_height="170dp"
        android:background="@drawable/home_item_recycler_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvListItemFullListRatinglistRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/home_item_recycler_background"
        android:backgroundTint="@color/red_main"
        android:padding="4dp"
        android:text="@string/sample_rating"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/ivListItemFullListRatinglistPoster"
        app:layout_constraintTop_toTopOf="@id/ivListItemFullListRatinglistPoster" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvListItemFullListRatinglistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:maxWidth="190dp"
        android:text="@string/sample_title_movie_home"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvListItemFullListRatinglistYear"
        app:layout_constraintStart_toEndOf="@id/ivListItemFullListRatinglistPoster"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvListItemFullListRatinglistYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sample_year"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivListItemFullListRatinglistPoster"
        app:layout_constraintTop_toBottomOf="@id/tvListItemFullListRatinglistTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvListItemFullListRatinglistLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sample_runtime"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvListItemFullListRatinglistYear"
        app:layout_constraintTop_toBottomOf="@id/tvListItemFullListRatinglistTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvListItemFullListRatinglistMyRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_star"
        android:drawableTint="@color/red_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvListItemFullListRatinglistYear"
        app:layout_constraintStart_toEndOf="@id/tvListItemFullListRatinglistTitle"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>