<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.ui.HomeFragment">

    <ImageView
        android:id="@+id/ivHomeMainMovie"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivHomeNotification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="@id/ivHomeMainMovie"
        app:layout_constraintTop_toTopOf="@id/ivHomeMainMovie" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivHomeSearch"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_search_unselected"
        android:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/ivHomeNotification"
        app:layout_constraintTop_toTopOf="@id/ivHomeMainMovie" />

    <Button
        android:id="@+id/btnHomePlay"
        android:layout_width="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_background_oval"
        android:drawableLeft="@drawable/ic_play_circle"
        android:padding="12dp"
        android:text="@string/name_button_play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ivHomeMainMovie"
        app:layout_constraintStart_toStartOf="@id/ivHomeMainMovie" />

    <Button
        android:id="@+id/btnHomeAddList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_background_edge_color"
        android:drawableLeft="@drawable/ic_plus"
        android:padding="12dp"
        android:text="@string/name_button_add_list"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ivHomeMainMovie"
        app:layout_constraintLeft_toRightOf="@id/btnHomePlay" />

    <TextView
        android:id="@+id/tvHomeGenresMovie"
        app:layout_constraintBottom_toTopOf="@id/btnHomePlay"
        app:layout_constraintStart_toStartOf="@id/ivHomeMainMovie"
        android:textColor="@color/white"
        android:text="@string/sample_genres_movie_home"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="6dp"
        android:maxWidth="200dp"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/sample_title_movie_home"
        android:maxWidth="200dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/tvHomeTitleMovie"
        app:layout_constraintBottom_toTopOf="@id/tvHomeGenresMovie"
        app:layout_constraintStart_toStartOf="@id/ivHomeMainMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>